Finished W06 Prove
